# pharma-ecom

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f204414e74a_remove_group_stuff.py  3b25cf37b9fa_add_return_fields_to_order.py  3c926d2c82d2_remove_ai_chat_session_tables.py  4932f694cf1b_initial_migration.py  6e2bdfc3f051_add_ai_chat_messages_table.py  86459825c959_add_shop_reviews_table.py  8a5404b8007b_add_articles_table.py  8d481b09966b_make_ai_chat_user_id_non_nullable.py  9054e5d75974_add_return_requested_to_orderstatus.py  c5d28071432d_remove_ai_chat_sessions_in_user_table.py  d491f471e582_make_currency_to_mmk_in_payment.py  f348af9eb3dc_make_address_nullable.py
backend/app/: main.py
backend/app/core/: config.py  file_upload.py  google_oauth.py  redis.py  security.py  websocket_manager.py  ws_auth.py
backend/app/crud/: ai_chat_crud.py  article_crud.py  base.py  cart_crud.py  cart_item_crud.py  category_crud.py  chat_crud.py  conversation_crud.py  conversation_member_crud.py  message_crud.py  order_crud.py  payment_crud.py  product_crud.py  review_crud.py  user_crud.py
backend/app/db/: database.py
backend/app/models/: __init__.py  ai_chat.py  article.py  base.py  cart.py  cart_item.py  category.py  chat.py  conversation.py  conversation_member.py  customer.py  message.py  order.py  order_item.py  payment.py  product.py  product_image.py  review.py  user.py
backend/app/schemas/: ai_chat.py  article.py  (+15 more)
backend/prompts/: pharmacy_system_prompt.md
(+106 files in other folders)
